--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -29,10 +29,21 @@
         android:layout_marginTop="8dp"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
 
-    <NumberPicker
-        android:id="@+id/number_picker_priority"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+<!--    <NumberPicker-->
+<!--        android:id="@+id/number_picker_priority"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"/>-->
 
+    <com.shawnlin.numberpicker.NumberPicker
+        android:id="@+id/number_picker_priority"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+
+        app:np_dividerColor="@color/colorPrimary"
+        app:np_selectedTextColor="@color/colorPrimary"
+        app:np_textColor="@color/colorPrimary"
+        app:np_value="3"
+        app:np_orientation="horizontal"/>
 
 </LinearLayout>
