--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -25,10 +25,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Priority:"
         android:layout_marginTop="8dp"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
-    
+        android:text="Priority:"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
+
 
     <com.shawnlin.numberpicker.NumberPicker
         android:id="@+id/number_picker_priority"
@@ -36,9 +36,9 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         app:np_dividerColor="@color/colorPrimary"
+        app:np_orientation="horizontal"
         app:np_selectedTextColor="@color/colorPrimary"
         app:np_textColor="@color/colorPrimary"
-        app:np_value="3"
-        app:np_orientation="horizontal"/>
+        app:np_value="3" />
 
 </LinearLayout>
