--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,5 +6,9 @@
         android:id="@+id/delete_all_notes_menu_item"
         android:title="Delete all notes"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/rate_me"
+        android:title="Rate Me"
+        app:showAsAction="never"/>
 
 </menu>
