--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -13,14 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/string_title"
-        android:inputType="text" />
+        android:inputType="text"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/edit_text_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/string_description"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:importantForAutofill="no" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,7 +36,6 @@
         android:id="@+id/number_picker_priority"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         app:np_dividerColor="@color/colorPrimary"
         app:np_orientation="horizontal"
         app:np_selectedTextColor="@color/colorPrimary"
