--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
@@ -8,7 +9,8 @@
     android:layout_marginEnd="8dp"
     app:cardCornerRadius="4dp"
     app:strokeColor="@color/cardview_dark_background"
-    app:strokeWidth="@dimen/cardview_default_elevation">
+    app:strokeWidth="@dimen/cardview_default_elevation"
+    tools:ignore="PrivateResource">
 
 
     <RelativeLayout
@@ -23,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:paddingRight="4dp"
-            android:text="1"
+            android:text="@string/_one"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
@@ -35,7 +37,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:paddingLeft="4dp"
-            android:text="Title"
+            android:text="@string/title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
@@ -43,8 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_title"
-            android:paddingLeft="4dp"
-            android:text="Description" />
+            android:paddingStart="4dp"
+            android:text="@string/description" />
     </RelativeLayout>
 
 
