--- a/app/src/main/res/menu/add_note_menu.xml
+++ b/app/src/main/res/menu/add_note_menu.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/save_note"
         android:icon="@drawable/ic_save"
-        android:title="Save"
+        android:title="@string/save"
         app:showAsAction="ifRoom"/>
 
 
